--- a/totoSg..html
+++ b/totoSg..html
@@ -222,6 +222,7 @@ for(var i =0; i<= len ; i++){
     
      </ul>
     </form>
+	<a href="https://www.creatifwerks.com/toto-number-generator/">Toto Number Generator</a>
 	
 	</body>
 	
